--- a/app/public/styles/global.scss
+++ b/app/public/styles/global.scss
@@ -1,7 +1,30 @@
 @charset "utf-8";
-@import "../../node_modules/bulma/bulma.sass";
+
+@import url("https://fonts.googleapis.com/css2?family=Roboto&display=swap");
+$family-sans-serif: "Roboto", sans-serif;
+
+$danger: #ee0202;
 
 canvas {
 	display: block;
 	margin: auto;
 }
+
+.video-container {
+	position: relative;
+}
+
+.video-container video {
+	width: 100%;
+	height: 100%;
+	position: absolute;
+	object-fit: cover;
+	z-index: 0;
+}
+
+.video-container .video-caption {
+	z-index: 1;
+	position: relative;
+}
+
+@import "../../node_modules/bulma/bulma.sass";
