feat: :art: improved GUI (#155)
* docs(README): :memo: updated README

updated README with the Best-README-Template
(https://github.com/othneildrew/Best-README-Template)

* docs(README): :memo: added additional acknowledgements

added npm, SonarCloud and Azure DevOps to the acknowledgements

* feat: :lipstick: better styling of join and game pages

* feat: :sparkles: show scoreboard only for players who are finished

* fix: :bug: fixed tests

* refactor: :recycle: introduced separate view classes for UI

UI changes are now handled by separate classes, GameViewController (for
game.html) and JoinViewController (for join.html). These controllers
also use the TableGenerator helper class. Tests have been moved and/or
fixed.

--- a/app/public/styles/global.scss
+++ b/app/public/styles/global.scss
@@ -1,15 +1,20 @@
 @charset "utf-8";
 
+// Import fonts
+@import url("https://fonts.googleapis.com/css2?family=Anton&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Roboto&display=swap");
-$family-sans-serif: "Roboto", sans-serif;
 
+// Set Sass variables for Bulma
+$family-sans-serif: "Roboto", sans-serif;
 $danger: #ee0202;
 
+// Phaser Canvas
 canvas {
 	display: block;
 	margin: auto;
 }
 
+// Video-Background
 .video-container {
 	position: relative;
 }
@@ -25,6 +30,21 @@ canvas {
 .video-container .video-caption {
 	z-index: 1;
 	position: relative;
+}
+
+// Text over Image
+.level-preview-image {
+	position: relative;
+	text-align: center;
+	color: white;
+}
+
+.level-preview-image-overlay {
+	font-size: xx-large;
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
 }
 
 @import "../../node_modules/bulma/bulma.sass";
